add more basic ruby ignores

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,14 @@
 # or operating system, you probably want to add a global ignore instead:
 #   git config --global core.excludesfile '~/.gitignore_global'
 
+# bad gem etiquette, man
+.ruby-version
+.ruby-gemset
+ruby-version
+ruby-gemset
+.rvmrc
+Gemfile.lock
+
 *.rbc
 capybara-*.html
 .rspec
